@@ -1,3 +1,8 @@
+2004-02-10  Sam Steingold  <sds@gnu.org>
+
+	* lfloat.d (LF_sqrt_LF): fixed a bug with large uexp whereby SQRT
+	of MOST-POSITIVE-LONG-FLOAT was less than 1
+
 2004-02-09  James Anderson  <james.anderson@setf.de>
 	    Sam Steingold  <sds@gnu.org>
 
